--- a/tela de login/index.html
+++ b/tela de login/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="logo"><img src="/img/logo-amigo-secreto.png" alt="Logo" class="logo"></div>
 
-      <div class="titulo"><h3>Amigo Secreto</h3></div>
+      <div class="titulo">Amigo Secreto</div>
     </header>
 
     <main class="login-container">
